		Library: fixed PHP warning in Library's type-specific fields AJAX script
		Markbook: fixed multi-byte string length issue causing automatic comment expansion in Markbook view
		Messenger: added the ability to resend in By Roll Group view in View Send Report
		Messenger: added ability for uses with Manage Messages_all to resend on behalf of others
		Planner: fixed module name substitution in links in Lesson Planner
		Planner: added Smart Blocks tab to Unit Overview in Lesson Planner
		Planner: added indexes to gibbonLike database table to improve performance
		Staff: fixed bug in parameter passing in Add in Manage Staff
		Students: added sibling and family information to Letters Home by Roll Group
		Students: added Comment field to medical form, linked to student application form.
		Students: added View option to Students by Form Group report, allowing Basic or Extended view
		Students: changed School Attendance sub page to Attendance to improve UI consistency
		Students: adjusted logic in student enrolment visualisation to include students who are not 'Full'
		School Admin: updated Finance Settings email to default to organisation email if blank
		School Admin: extend length of name field in Manage Houses to 30 chars
		System Admin: fixed bug causing theme names with spaces to break the theme installer
		System Admin: fixed spelling error in Department settings
		System Admin: fixed typo in Third Party Settings
		Timetable: added This Week link to timetable date navigation in Timetable by Person
		Timetable: added highlight to the current day column in Timetable by Person and Facility
		Timetable: fixed error is specification of gibbonTT database table
		User Admin: fixed Child's Name list in Edit Family to include all students
		User Admin: fixed bug preventing some family links from showing up in Manage Users
		User Admin: removed Back link from child and adult delete modals in Manage Families